favorite into current object
